# wirenboard-practices

practice7/: data.csv  data.json  data.xml  receiver.py  values_parser.py
practice8/: mqtt_generator.py  pyproject.toml  receiver.py
